--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/x-data-grid": "^6.19.4",
+    "@netlify/plugin-nextjs": "^5.3.3",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
