--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node-dev app.ts",
     "build": "tsc",
+    "prebuild": "ts-node scripts/copy-assets",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only server.ts"
   },
@@ -40,6 +41,9 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
-    "@types/nodemailer": "^6.4.15"
+    "@types/nodemailer": "^6.4.15",
+    "@types/shelljs": "^0.8.15",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.2"
   }
 }
