--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
+    "stripe": "^16.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
